--- a/DVS_Mobile_Apps/app/src/main/res/values/strings.xml
+++ b/DVS_Mobile_Apps/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">DVS</string>
+    <string name="your_web_client_id">812819632675-3fcdk5ln4n1gr57vi9rk4od29k2hb0gd.apps.googleusercontent.com</string>
 </resources>
