--- a/DVS_Mobile_Apps/app/src/main/res/values/strings.xml
+++ b/DVS_Mobile_Apps/app/src/main/res/values/strings.xml
@@ -1,4 +1,10 @@
 <resources>
     <string name="app_name">DVS</string>
     <string name="your_web_client_id">812819632675-3fcdk5ln4n1gr57vi9rk4od29k2hb0gd.apps.googleusercontent.com</string>
+    <string name="menu_home">Home</string>
+    <string name="menu_utama">Menu</string>
+    <string name="menu_profile">Profil</string>
+    <string name="menu_settings">Settings</string>
+    <string name="menu_chat">Chat</string>
+    <string name="caption_home1">Selamat Datang</string>
 </resources>
